--- a/style.css
+++ b/style.css
@@ -25,3 +25,70 @@ padding: 20px;
 text-align: center;
 font-family: "Rubik Mono One";}
 
+.section_banner{
+    color: #000;
+    background-color: #f1f1f1;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    text-align: center;
+    font-size: 3rem;
+    margin:auto;
+}
+
+/* linea porcentaje*/
+
+.barra90{
+    background-color: white;
+    padding: 1rem;   
+    background:linear-gradient(
+        to right, 
+        rgb(4, 214, 14) 90%,
+        rgb(255, 255, 255)10%);
+    border:2px solid black;        
+} 
+
+.barra75{
+    background-color: white;
+    padding: 1rem;   
+    background:linear-gradient(
+        to right, 
+        rgb(4, 214, 14) 75%,
+        rgb(255, 255, 255)10%);
+    border:2px solid black;        
+} 
+
+.barra50{
+    background-color: white;
+    padding: 1rem;   
+    background:linear-gradient(
+        to right, 
+        rgb(4, 214, 14) 50%,
+        rgb(255, 255, 255)10%);
+    border:2px solid black;        
+} 
+
+.barra60{
+    background-color: white;
+    padding: 1rem;   
+    background:linear-gradient(
+        to right, 
+        rgb(4, 214, 14) 60%,
+        rgb(255, 255, 255)10%);
+    border:2px solid black;        
+} 
+
+.icono{
+    background-color: #ffffff;
+    font-size: 50px;
+    border-style:ridge;
+    position:relative;
+    bottom:5rem;
+    
+}
+
+.icono2{
+    background-color: #ffffff;
+    font-size: 50px;
+    border-style:ridge;
+    
+}
+
